create a separate folder and file for controllers

--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,14 @@
     <!-- your app's js -->
     <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
-    <script src="scripts/controllers.js"></script>
+    <!-- Controllers -->
+    <script src="scripts/controllers/tabs/account.js"></script>
+    <script src="scripts/controllers/tabs/chat-detail.js"></script>
+    <script src="scripts/controllers/tabs/chats.js"></script>
+    <script src="scripts/controllers/tabs/dash.js"></script>
+    <script src="scripts/controllers/tabs/home-tab.js"></script>
+    <script src="scripts/controllers/sign-in.js"></script>
+    <!-- Services -->
     <script src="scripts/services.js"></script>
     <script src="scripts/configuration.js"></script>
     <!-- endbuild -->
