application till now

--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,14 @@
     <script src="scripts/controllers/tabs/dash.js"></script>
     <script src="scripts/controllers/tabs/home-tab.js"></script>
     <script src="scripts/controllers/sign-in.js"></script>
+    <script src="scripts/controllers/register.js"></script>
+    <script src="scripts/controllers/tabs/topic.js"></script>
+    <script src="scripts/controllers/tabs/topicsigla.js"></script>
+    <script src="scripts/controllers/tabs/aula.js"></script>
+    <script src="scripts/controllers/tabs/evento.js"></script>
+    <script src="scripts/controllers/tabs/nuevoevento.js"></script>
+    <script src="scripts/controllers/tabs/nuevaaula.js"></script>
+    <script src="scripts/controllers/tabs/nuevamateria.js"></script>
     <!-- Services -->
     <script src="scripts/services.js"></script>
     <script src="scripts/configuration.js"></script>
