--- a/app/index.html
+++ b/app/index.html
@@ -46,11 +46,13 @@
     <script src="scripts/controllers/places.js"></script>
     <script src="scripts/controllers/events.js"></script>
     <script src="scripts/controllers/create-topic.js"></script>
-    <script src="scripts/controllers/create-place.js"></script>
     <script src="scripts/controllers/create-event.js"></script>
+    <script src="scripts/controllers/topic-comments.js"></script>
+    <script src="scripts/controllers/place-detail.js"></script>
     <!-- Services -->
     <!-- TODO: separate services files and integrate with backend -->
     <script src="scripts/services.js"></script>
+    <script src="scripts/services/AuthService.js"></script>
     <script src="scripts/configuration.js"></script>
     <!-- endbuild -->
   </head>
@@ -58,13 +60,75 @@
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
-    <div ng-controller="AppController">
+    <!-- <div ng-controller="AppController">
       <ion-nav-view></ion-nav-view>
-    </div>
+    </div> -->
     <!--
       The views will be rendered in the <ion-nav-view> directive below
       Templates are in the /templates folder (but you could also
       have templates inline in this html file if you'd like).
     -->
+
+ <!--    <ion-side-menus>
+
+        
+        <ion-side-menu-content>
+            <ion-header-bar class="bar-header">
+                <button class="button button-icon" ng-click="toggleSideMenu()">
+                    <i class="icon ion-navicon"></i>
+                </button>
+                <h1 class="title">Home1</h1>
+                <button class="button button-icon">
+                    <i class="icon ion-star"></i>
+                </button>
+            </ion-header-bar>
+
+
+        <ion-nav-view class="slide-left-right"></ion-nav-view>
+
+      </ion-side-menu-content>
+
+    </ion-side-menus> -->
+
+    <ion-nav-view></ion-nav-view>
+
+    <ion-side-menus enable-menu-with-back-views="true">
+
+        <ion-side-menu-content>
+        <ion-nav-bar class="bar-dark">
+          <ion-nav-buttons side="left">
+           <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+          </ion-nav-buttons>
+        </ion-nav-bar>
+        <ion-nav-view name="appContent"></ion-nav-view>
+        </ion-side-menu-content>
+
+        <ion-side-menu side="left">
+        <ion-header-bar class="bar-dark">
+          <h1 class="title">Menu</h1>
+        </ion-header-bar>
+        <ion-content>
+          <ion-item menu-close href="#/profile">
+             Perfil
+          </ion-item>
+          <ion-item menu-close href="#/topics">
+             Materias
+          </ion-item>
+          <ion-item menu-close href="#/places">
+             Aulas
+          </ion-item>
+          <ion-item menu-close href="#/events">
+             Eventos
+          </ion-item>
+          <ion-item menu-close href="#/home">
+             Principal
+          </ion-item>
+          <ion-item menu-close href="#/login">
+             Salir
+          </ion-item>
+        </ion-content>
+        </ion-side-menu>
+        </ion-side-menus>
+    
   </body>
 </html>
